--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "Simple sort algorithms visualizions",
   "main": "index.html",
   "scripts": {
-    "lint": "node_modules/.bin/eslint . --format codeframe",
-    "reset-db": "rm -f ./db.sqlite3 && babel-node create-mock-data.js",
-    "start": "webpack-dev-server --open",
-    "dev": "cross-env NODE_ENV=development webpack --progress --hide-modules",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "lint": "node_modules/.bin/eslint . --format codeframe"
   },
   "repository": {
     "type": "git",
@@ -29,25 +25,13 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.2",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.7",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^3.0.5",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.0.10",
-    "sass-loader": "^6.0.6",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack": "^3.10.0",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "eslint-plugin-react": "^7.5.1"
   },
   "author": "Ar.Vaganov",
   "license": "MIT",
