--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Simple sort algorithms visualizions",
   "main": "index.html",
   "scripts": {
-    "lint": "node_modules/.bin/eslint . --format codeframe"
+    "lint": "node_modules/.bin/eslint . --format codeframe",
+    "dev": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "build": "webpack --mode production ./src/index.js --output ./dist/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -24,13 +26,21 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "react-hot-loader": "^4.0.0",
+    "uglifyjs-webpack-plugin": "^1.2.2",
+    "webpack": "^4.1.0",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   },
   "author": "Ar.Vaganov",
   "license": "MIT",
